--- a/1173/amendments.yaml
+++ b/1173/amendments.yaml
@@ -1,21 +1,85 @@
-ships_maritime:
-  - _op: SUP
-    id: US04
-    entity: >-
-      Seven Seas Communications Inc., 1700 East Las Olas Blvd., Suite 202,
-      Ft. Lauderdale, FL 33301, United States.
-    contact: Gary A. Cantor
+notices:
 
-iptn:
-  - _op: ADD
-    country_code: 883
-    ident_code: 5170
-    applicant: DIDWW
-    network: DIDWW
-    status: assigned
+  - title: >-
+      List of Ship Stations and Maritime Mobile Service Identity Assignments
+      (List V)
+      of 2018
+      Section VI
+    type: ships_maritime
+    items:
+      SUP:
+        US04:
+          entity: >-
+            Seven Seas Communications Inc., 1700 East Las Olas Blvd., Suite 202,
+            Ft. Lauderdale, FL 33301, United States
+          contact: Gary A. Cantor
 
-mnc:
-  - _op: SUP
-    area: Cyprus
-    code: "280 23"
-    network: Mundio Mobile Cyprus Ltd
+  - title: >-
+      List of Issuer Identifier Numbers
+      for the International Telecommunication Charge Card
+    rec: E.118
+    annex_to_ob: 1173
+    # annex_to_ob: 1161
+    amendment_no: 11
+    items:
+      Australia:
+        LIR:
+          "89 61 02":
+            company: >-
+              SingTel Optus Pty Limited
+              1 Lyonpark Road
+              MACQUARIE PARK NSW 2113
+            contact:
+              name: Tristan Thabtim
+              address: >-
+                PO Box 888
+                NSW-1670 NORTH RYDE
+              phone: +61 2 8082 7800
+              fax: +61 2 8082 7100
+              email: "Tristan.Thabtim@optus.com.au"
+
+  - title: >-
+      List of assigned Country Codes
+    rec: E.164
+    annex_to_ob: 1114
+    amendment_no: 9
+    items:
+      883:
+        ADD:
+          5170:
+            applicant: DIDWW
+            network: DIDWW
+            status: assigned
+            date: 2019-05-08
+
+  - title: >-
+      Mobile Network Codes (MNC) for the international identification plan
+      for public networks and subscriptions
+    rec: E.212
+    annex_to_ob: 1162
+    amendment_no: 9
+    items:
+      Cyprus:
+        SUP:
+          280 23:
+            network: Mundio Mobile Cyprus Ltd
+
+  - title: >-
+      List of ITU Carrier Codes
+    rec: M.1400
+    annex_to_ob: 1060
+    amendment_no: 79
+    items:
+      "Germany (Federal Republic Of) / DEU":
+        ADD:
+          INOV:
+            company:
+              name: inovisio communications GmbH
+              address: >-
+                Annaberger Strasse 240
+                D-09125 CHEMNITZ
+              contact:
+                name: Mr Michael Schräber
+                phone: +49 371 40300333
+                fax: +49 371 40300399
+                email: netzbetreiber@inovisio.de
