feat: Add ships/maritime list (R_SP_LM.V) as a pub

--- a/1173/amendments.yaml
+++ b/1173/amendments.yaml
@@ -1,7 +1,7 @@
 items:
 
   - target:
-      publication: list_v_ships_maritime
+      publication: R_SP_LM.V
       issue: 2018
       location: Section VI
     changeset:
