feat: Localize publication titles

--- a/1114/meta.yaml
+++ b/1114/meta.yaml
@@ -3,6 +3,9 @@ publication_date: 2016-12-15
 cutoff_date: 2016-12-1
 issn: 1564-5223
 
+languages:
+  en: yes
+
 authors:
   - address: >-
       Place des Nations CH-1211
