--- a/1162/meta.yaml
+++ b/1162/meta.yaml
@@ -3,6 +3,9 @@ publication_date: 2018-12-15
 cutoff_date: 2018-12-3
 issn: 1564-5223
 
+languages:
+  en: yes
+
 authors:
   - address: >-
       Place des Nations CH-1211
