--- a/lists/E118_IIN/meta.yaml
+++ b/lists/E118_IIN/meta.yaml
@@ -1,5 +1,6 @@
 id: E118_IIN
-title: List of Issuer Identifier Numbers for the International Telecommunication Charge Card
+title:
+  en: List of Issuer Identifier Numbers for the International Telecommunication Charge Card
 recommendation:
   body: ITU-T
   code: E.118
