--- a/lists/E212_MNC/meta.yaml
+++ b/lists/E212_MNC/meta.yaml
@@ -1,8 +1,15 @@
 id: E212_MNC
-title: >-
-  Mobile Network Codes (MNC)
-  for the international identification plan
-  for public networks and subscriptions
+
+title:
+  en: >-
+    Mobile Network Codes (MNC)
+    for the international identification plan
+    for public networks and subscriptions
+  ru: >-
+    Коды сетей подвижной связи (MNC)
+    для плана международной идентификации
+    для сетей общего пользования и абонентов
+
 recommendation:
   body: ITU-T
   code: E.212
