--- a/lists/R_SP_LM.V/meta.yaml
+++ b/lists/R_SP_LM.V/meta.yaml
@@ -1,3 +1,3 @@
 id: R_SP_LM.V
-title: >-
-  List V - List of Ship Stations and Maritime Mobile Service Identity Assignments
+title:
+  en: List V - List of Ship Stations and Maritime Mobile Service Identity Assignments
