--- a/1173/general.yaml
+++ b/1173/general.yaml
@@ -1,7 +1,3 @@
-lists_available_online:
-  - name: List of ITU Carrier Codes (ITU-T Rec. M.1400 (03/2013))
-    source: "http://www.itu.int/ITU-T/inr/icc/index.html"
-
 recommendations:
   approval_procedures: A.8
   approved:
@@ -28,23 +24,26 @@ nnp:
       dates: [2019-05-13]
       _contents: iran.adoc
 
-notices:
-  - title: Approved recommendations
+messages:
+  - type: approved_recs
 
-  - title: Annexed lists
-    type: annexed_lists
+  - type: running_annexes
+    extra_links:
+      - M1400_ICC
+      - BUREAUFAX
+      - ROA
+
+  - type: service_restrictions
     items:
-      available_online:
-        - name: List of ITU Carrier Codes (ITU-T Rec. M.1400 (03/2013))
-          source: "http://www.itu.int/ITU-T/inr/icc/index.html"
+      - country: Seychelles
+        ob: 1006
+        page: 13
+      - country: Slovakia
+        ob: 1007
+        page: 12
 
-  - title: Telephone Service
-    type: tel_service
+  - type: telephone_service
+    title: Telephone Service
     rec: E.164
     url: http://www.itu.int/itu-t/inr-nnp
-    items:
-      "Iran (Islamic Republic of)":
-        country_code: 98
-        communications:
-          dates: [2019-05-13]
-          _contents: iran.adoc
+    contents: ts.adoc
