--- a/1173/meta.yaml
+++ b/1173/meta.yaml
@@ -14,13 +14,17 @@ authors:
     contacts:
       - { type: phone, data: "+41 22 730 5111" }
       - { type: email, data: "itumail@itu.int", recommended: yes }
-  - name: Standardization Bureau (TSB)
+  - name:
+      en: Standardization Bureau (TSB)
+      ru: Бюро стандартизации электросвязи (БСЭ)
     contacts:
       - { type: phone, data: "+41 22 730 5211", recommended: yes }
       - { type: fax, data: "+41 22 730 5853", recommended: yes }
       - { type: email, data: "tsbmail@itu.int", recommended: yes }
       - { type: email, data: "tsbtson@itu.int", recommended: yes }
-  - name: "Radiocommunication Bureau (BR)"
+  - name:
+      en: Radiocommunication Bureau (BR)
+      ru: Бюро радиосвязи (БР)
     contacts:
       - { type: phone, data: "+41 22 730 5560", recommended: yes }
       - { type: fax, data: "+41 22 730 5785", recommended: yes }
