--- a/1173/amendments.yaml
+++ b/1173/amendments.yaml
@@ -1,6 +1,7 @@
-items:
+messages:
 
-  - target:
+  - type: amendment
+    target:
       publication: R_SP_LM.V
       issue: 2018
       location: Section VI
@@ -12,7 +13,8 @@ items:
             Ft. Lauderdale, FL 33301, United States
           contact_name: Gary A. Cantor
 
-  - target:
+  - type: amendment
+    target:
       publication: E118_IIN
       position_on: 2018-12-01
     changeset:
@@ -33,7 +35,8 @@ items:
               fax: +61 2 8082 7100
               email: "Tristan.Thabtim@optus.com.au"
 
-  - target:
+  - type: amendment
+    target:
       publication: E164_CC
       position_on: 2016-12-15
     changeset:
@@ -46,7 +49,8 @@ items:
             network: DIDWW
             status: assigned
 
-  - target:
+  - type: amendment
+    target:
       publication: E212_MNC
       position_on: 2018-12-15
     changeset:
@@ -61,7 +65,8 @@ items:
           - code: 280 02
             network: CYTA
 
-  - target:
+  - type: amendment
+    target:
       publication: M1400_ICC
       position_on: 2014-09-15
     changeset:
