--- a/1173/amendments.yaml
+++ b/1173/amendments.yaml
@@ -3,77 +3,34 @@ messages:
   - type: amendment
     target:
       publication: R_SP_LM.V
-      issue: 2018
-      location: Section VI
-    changeset:
-      SUP:
-        US04:
-          legal_entity_name: |-
-            Seven Seas Communications Inc., 1700 East Las Olas Blvd., Suite 202,
-            Ft. Lauderdale, FL 33301, United States
-          contact_name: Gary A. Cantor
+      position_on: 2018
+    contents: amendments/list-v.adoc
 
   - type: amendment
     target:
       publication: E118_IIN
       position_on: 2018-12-01
-    changeset:
-      Australia:
-        LIR:
-          "89 61 02":
-            company:
-              name: SingTel Optus Pty Limited
-              address: |-
-                1 Lyonpark Road
-                MACQUARIE PARK NSW 2113
-            contact:
-              name: Tristan Thabtim
-              address: |-
-                PO Box 888
-                NSW-1670 NORTH RYDE
-              phone: +61 2 8082 7800
-              fax: +61 2 8082 7100
-              email: "Tristan.Thabtim@optus.com.au"
+    contents: amendments/e118-iin.adoc
 
   - type: amendment
     target:
       publication: E164_CC
       position_on: 2016-12-15
-    changeset:
-      - op: ADD
-        location: "Note q"
-        date: 2019-05-08
-        items:
-          - code: 883 5170
-            applicant: DIDWW
-            network: DIDWW
-            status: assigned
+    contents: amendments/e164-cc.adoc
 
   - type: amendment
     target:
       publication: E212_MNC
       position_on: 2018-12-15
-    changeset:
-      Cyprus:
-        SUP:
-          "280 23": Mundio Mobile Cyprus Ltd
-        ADD:
-          "280 02": CYTA
+    contents: amendments/e212-mnc.adoc
 
   - type: amendment
     target:
       publication: M1400_ICC
       position_on: 2014-09-15
-    changeset:
-      "Germany (Federal Republic Of) / DEU":
-        ADD:
-          INOV:
-            name: inovisio communications GmbH
-            address: |-
-              Annaberger Strasse 240
-              D-09125 CHEMNITZ
-            contact: |-
-              Mr Michael Schräber
-              +49 371 40300333
-              +49 371 40300399
-              netzbetreiber@inovisio.de
+    contents: amendments/m1400-icc.adoc
+
+  - type: amendment
+    target:
+      publication: NNP
+    contents: amendments/e129-nnp.adoc
