--- a/1173/general.yaml
+++ b/1173/general.yaml
@@ -7,18 +7,12 @@ messages:
       - ROA
 
   - type: approved_recommendations
-    approval_procedures: A.8
-    items:
-      - code: F.743.7
-        version: 2019-05
 
   - type: iptn
-    contents: iptn.adoc
+    contents: general/iptn.adoc
 
   - type: telephone_service
-    rec: E.164
-    url: http://www.itu.int/itu-t/inr-nnp
-    contents: ts.adoc
+    contents: general/ts.adoc
 
   - type: service_restrictions
     items:
