--- a/lists/R_SP_LM.V/meta.yaml
+++ b/lists/R_SP_LM.V/meta.yaml
@@ -1,3 +1,4 @@
 id: R_SP_LM.V
 title:
   en: List V - List of Ship Stations and Maritime Mobile Service Identity Assignments
+url: https://www.itu.int/pub/R-SP-LM.V/
