--- a/issues/1173/general.yaml
+++ b/issues/1173/general.yaml
@@ -7,6 +7,8 @@ messages:
       - ROA
 
   - type: approved_recommendations
+    items:
+      - { code: F.743.7, version: 2019-05 }
 
   - type: iptn
     contents: general/iptn.adoc
