--- a/lists/E212_MNC/meta.yaml
+++ b/lists/E212_MNC/meta.yaml
@@ -9,6 +9,8 @@ title:
     Коды сетей подвижной связи (MNC)
     для плана международной идентификации
     для сетей общего пользования и абонентов
+  zh: >-
+    用于公共网络和订户的国际识别规划的移动网络代码（MNC）
 
 recommendation:
   body: ITU-T
