--- a/lists/NNP/meta.yaml
+++ b/lists/NNP/meta.yaml
@@ -2,6 +2,7 @@ id: NNP
 title:
   en: National Numbering Plan
   ru: Национальный план нумерации
+  zh: 国内编号方案
 
 url: http://www.itu.int/itu-t/inr/nnp/index.html
 
