1172: Fix approved recommendation format

--- a/issues/1172/general.yaml
+++ b/issues/1172/general.yaml
@@ -12,7 +12,7 @@ messages:
       Q.731.4: 2019-04
       Q.731.5: 2019-04
       Q.731.6: 2019-04
-      Q.850: (2018) Amendment 1 (04/19)
+      Q.850 (2018) Amendment 1: 2019-04
       Q.3054: 2019-04
       Q.3642: 2019-04
       Q.4014.1: 2019-04
