--- a/issues/1170/general.yaml
+++ b/issues/1170/general.yaml
@@ -7,6 +7,8 @@ messages:
       - ROA
 
   - type: approved_recommendations
+    by: AAP-55
+    procedures: Recommendation ITU-T A.8
     items:
       G.709/Y.1331 (2016) Amendment 3: 2019-03
       G.997.2: 2019-03
