--- a/issues/1172/general.yaml
+++ b/issues/1172/general.yaml
@@ -7,6 +7,8 @@ messages:
       - ROA
 
   - type: approved_recommendations
+    by: AAP-57
+    procedures: Recommendation ITU-T A.8
     items:
       Q.731.3: 2019-04
       Q.731.4: 2019-04
