--- a/issues/1173/general.yaml
+++ b/issues/1173/general.yaml
@@ -7,6 +7,8 @@ messages:
       - ROA
 
   - type: approved_recommendations
+    by: AAP-58
+    procedures: Recommendation ITU-T A.8
     items:
       F.743.7: 2019-05
       F.743.8: 2019-05
