lists/M1400_ICC: Fix canonical URL

--- a/lists/M1400_ICC/meta.yaml
+++ b/lists/M1400_ICC/meta.yaml
@@ -1,5 +1,5 @@
 id: M1400_ICC
-url: www.itu.int/ITU-T/inr/icc/index.html
+url: http://www.itu.int/ITU-T/inr/icc/index.html
 
 title:
   en: List of ITU Carrier Codes
