--- a/lists/Q708_ISPC/meta.yaml
+++ b/lists/Q708_ISPC/meta.yaml
@@ -1,6 +1,6 @@
 id: Q708_ISPC
 title:
-  en: List of International Signalling Point Codes
+  en: List of International Signalling Point Codes (ISPC)
 
 recommendation:
   body: ITU-T
