issues: Add 1174 & stub for 1171

--- a/issues/1171/amendments.yaml
+++ b/issues/1171/amendments.yaml
@@ -4,27 +4,27 @@ messages:
     target:
       publication: E118_IIN
       position_on: 2018-12-01
-  contents: amendments/e118_iin.adoc
+    contents: amendments/e118-iin.adoc
 
   - type: amendment
     target:
       publication: E212_MNC
       position_on: 2018-12-15
-  contents: amendments/e212_mnc.adoc
+    contents: amendments/e212-mnc.adoc
 
   - type: amendment
     target:
       publication: M1400_ICC
       position_on: 2014-09-15
-  contents: amendments/m1400_icc.adoc
+    contents: amendments/m1400-icc.adoc
 
   - type: amendment
     target:
       publication: Q708_ISPC
       position_on: 2016-10-01
-  contents: amendments/q708_ispc.adoc
+    contents: amendments/q708-ispc.adoc
 
   - type: amendment
     target:
       publication: NNP
-  contents: amendments/e129-nnp.adoc
+    contents: amendments/e129-nnp.adoc
