--- a/issues/1171/general.yaml
+++ b/issues/1171/general.yaml
@@ -7,8 +7,10 @@ messages:
       - ROA
 
   - type: approved_recommendations
+    by: AAP-56
+    procedures: Recommendation ITU-T A.8
     items:
-      G.709.1: 2019-04
+      G.709.1/Y.1331.1 (2018) Amd. 1: 2019-04
       M.3040: 2019-04
 
   - type: telephone_service
@@ -40,4 +42,3 @@ messages:
       - country: Ukraine
         ob: 1148
         page: 5
-
