fix: Format author address preserving newlines

--- a/issues/1114/meta.yaml
+++ b/issues/1114/meta.yaml
@@ -7,7 +7,7 @@ languages:
   en: yes
 
 authors:
-  - address: >-
+  - address: |-
       Place des Nations CH-1211
       Genève 20 (Switzerland)
     contacts:
