--- a/issues/1173/meta.yaml
+++ b/issues/1173/meta.yaml
@@ -9,7 +9,7 @@ languages:
   zh: yes
 
 authors:
-  - address: >-
+  - address: |-
       Place des Nations CH-1211
       Genève 20 (Switzerland)
     contacts:
