--- a/issues/1171/amendments.yaml
+++ b/issues/1171/amendments.yaml
@@ -27,4 +27,4 @@ messages:
   - type: amendment
     target:
       publication: NNP
-    contents: amendments/e129-nnp.adoc
+    contents: amendments/nnp.adoc
