--- a/lists/E218_TRCC/meta.yaml
+++ b/lists/E218_TRCC/meta.yaml
@@ -3,6 +3,8 @@ id: E218_TRCC
 title:
   en: List of terrestrial trunk radio mobile country codes
 
+url: https://www.itu.int/pub/T-SP-E.218-2011
+
 recommendation:
   body: ITU-T
   code: E.218
