--- a/lists/Q708_SANC/meta.yaml
+++ b/lists/Q708_SANC/meta.yaml
@@ -3,6 +3,8 @@ id: Q708_SANC
 title:
   en: List of Signalling Area/Network Codes (SANC)
 
+url: https://www.itu.int/pub/T-SP-Q.708A-2013
+
 recommendation:
   body: ITU-T
   code: Q.708
