chore: Troubleshoot Travis site build, cont’d
#18

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 dist: xenial
+
 addons:
   apt:
     update: true
 
-after_deploy:
+script:
   - >
       echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST" &&
       if [[ ($TRAVIS_BRANCH == master) &&
