--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script: |
   echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST" &&
   if [[ ($TRAVIS_BRANCH == master) &&
         ($TRAVIS_PULL_REQUEST == false) ]] ; then
-    curl -LO --retry 3 https://raw.github.com/mernst/plume-lib/master/bin/trigger-travis.sh &&
+    curl -LO --retry 3 https://gist.githubusercontent.com/strogonoff/cfb99e19edd5fa5594cccdd082f35868/raw/efbdc93be78484ab7fd9539220f29717483d3759/trigger-travis.sh &&
     sh trigger-travis.sh --pro ituob ituob.org $TRAVIS_ACCESS_TOKEN;
   fi
