--- a/issues/1178/general.yaml
+++ b/issues/1178/general.yaml
@@ -1,9 +1,9 @@
 messages:
-  - type: running_annexes
-    extra_links:
+  - extra_links:
       - M1400_ICC
       - BUREAUFAX
       - ROA
+    type: running_annexes
   - type: approved_recommendations
     items:
       H.871: 2019-07-01
